[tool.poetry]
name = "cleanba"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]
readme = "README.md"
packages = [
    { include = "cleanba" },
    { include = "cleanrl_utils" },
]

[tool.poetry.dependencies]
python = "^3.8"
tensorboard = "^2.12.0"
envpool = "^0.8.1"
jax = "0.3.25"
flax = "0.6.0"
optax = "0.1.3"
huggingface-hub = "^0.12.0"
jaxlib = "0.3.25"
wandb = "^0.13.10"
tensorboardx = "^2.5.1"
chex = "0.1.5"
gym = "0.23.1"
opencv-python = "^4.7.0.68"
moviepy = "^1.0.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
